# process_triage

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN_TO_MAKE_PROCESS_TRIAGE_INTO_AN_ALIEN_TECHNOLOGY_ARTIFACT.md  README.md  install.sh  pt
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  coverage.yml  musl-test.yml  release.yml  test.yml  update-packages.yml
crates/: README.md
crates/pt-common/: Cargo.toml
crates/pt-config/: Cargo.toml
crates/pt-config/src/: lib.rs  policy.rs  preset.rs  priors.rs  provenance.rs  resolve.rs  snapshot.rs  validate.rs
crates/pt-config/tests/: config_validation_nomock.rs
crates/pt-core/: Cargo.toml
crates/pt-report/: Cargo.toml
crates/pt-telemetry/: Cargo.toml  (+1 more)
docs/: AGENT_INTEGRATION_GUIDE.md  CLI_SPECIFICATION.md  GOLDEN_PATH_UX.md  PACKAGE_ARCHITECTURE.md  PROVENANCE_TESTING_AND_LOGGING.md  SIGNATURE_AUTHORING_GUIDE.md  TEST_COVERAGE_MATRIX.md  TOON_INTEGRATION_BRIEF.md
scripts/: bench_smoke.sh  check_binary_size.sh
specs/: agent-cli-contract.md  cli-surface.md  package-architecture.md  session-model.md  target-identity.md
test/: config_matrix_e2e.bats  docs_validate.bats  e2e_runner.sh  e2e_threshold_naming.sh  fixture_manifest_validator.bats  fixture_redaction_validator.bats  package_e2e.bats  pt.bats  pt_agent_contract.bats  pt_collect_candidates.bats  pt_config.bats  pt_e2e_real.bats  pt_robot.bats  pt_scoring.bats  pt_wrapper_mode.bats  test_commands.bats  test_e2e_install_lifecycle.bats  test_e2e_installer.bats  test_e2e_tui.bats  test_e2e_update.bats  test_memory.bats
(+357 files in other folders)
