[package]
name = "pt-config"
version = "0.1.0"
edition = "2021"
description = "Process Triage configuration loading, validation, and resolution"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
hostname = "0.4"

# Internal crates
pt-common = { path = "../pt-common" }

[dev-dependencies]
tempfile = "3"
